refactored all apis for new gasless flow.v0 without github login
