# src/routes/index.ts
@@ -2,6 +2,8 @@
 
 export default {
 	add_user: async() => (await import('./add_user')).default,
+	add_workspace_owner: async() => (await import('./add_workspace_owner')).default,
 	check: async() => (await import('./check')).default,
-	get_nonce: async() => (await import('./get_nonce')).default,
+	authorize_owner: async() => (await import('./authorize_owner')).default,
+	refresh_nonce: async() => (await import('./refresh_nonce')).default,
 }
